@@ -192,3 +192,4 @@ require_once('avro/io.php');
 require_once('avro/gmp.php');
 require_once('avro/datum.php');
 require_once('avro/data_file.php');
+require_once('avro/protocol.php');
